@@ -3,41 +3,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>ch.keepcalm.web</groupId>
-	<artifactId>angular-springboot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+ <groupId>ch.helsana.web</groupId>
+    <artifactId>myhelsana-frontend</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-	<name>angular-springboot</name>
-	<description>Demo project for Spring Boot and Angular </description>
+    <name>myhelsana-frontend</name>
+    <description>myhelsana ui</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
-        <relativePath/>
+        <version>1.5.6.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
-
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<!-- Dozer -->
-		<dozer.version>5.4.0</dozer.version>
-		<!-- Lombok -->
-		<lombok.version>1.16.10</lombok.version>
-
+		
 		<!-- frontend -->
 		<frontend-maven-plugin.version>0.0.26</frontend-maven-plugin.version>
 		<frontend-maven-plugin.nodeVersion>v7.2.1</frontend-maven-plugin.nodeVersion>
 		<frontend-maven-plugin.npmVersion>4.0.5</frontend-maven-plugin.npmVersion>
 		<frontend-working-dir>src/main/frontend/todo-app</frontend-working-dir>
 
-		<!-- JaCoCo-->
-		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-		<argLine>-XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
-		<!-- Coveralls -->
-		<coveralls-maven-plugin.version>4.2.0</coveralls-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -51,27 +41,7 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-
-		<!-- dozer -->
-		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>${dozer.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<!-- lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
-		</dependency>
-
+	
 		<!-- spring test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -82,7 +52,7 @@
 	
 
 	<build>
-		<finalName>angular-springboot</finalName>
+		<finalName>myhelsana-frontend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -170,92 +140,6 @@
 					</execution>
 				</executions>
 			</plugin>-->
-
-
-			<!-- Jacoco -->
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco-maven-plugin.version}</version>
-				<!--
-				<configuration>
-					<excludes>
-						<exclude>**/ch/keepcalm/services/**</exclude>
-					</excludes>
-				</configuration>
-				-->
-
-				<executions>
-					<execution>
-						<id>default-prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>default-report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>check-coverage</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<!-- Bundle -->
-								<rule>
-									<element>BUNDLE</element>
-									<excludes>
-										<exclude>**/*Test*</exclude>
-										<exclude>**/*Documentation*</exclude>
-									</excludes>
-									<limits>
-										<limit>
-											<counter>COMPLEXITY</counter>
-											<value>COVEREDRATIO</value>
-											<!-- <minimum>0.60</minimum>-->
-										</limit>
-									</limits>
-								</rule>
-								<!-- Package -->
-								<rule>
-									<element>PACKAGE</element>
-									<limits>
-										<limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
-											<!--<minimum>0.80</minimum>-->
-										</limit>
-										<limit>
-											<counter>CLASS</counter>
-											<value>MISSEDCOUNT</value>
-											<!--<maximum>0</maximum>-->
-										</limit>
-									</limits>
-								</rule>
-								<!-- Class -->
-								<rule>
-									<element>CLASS</element>
-									<excludes>
-										<exclude>*Test*</exclude>
-									</excludes>
-									<limits>
-										<limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
-											<!-- <minimum>0.50</minimum>-->
-										</limit>
-									</limits>
-								</rule>
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 </project>
